# emu

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  version.cmake
.github/workflows/: cmake-multi-platform.yml
doc/: opl3_test.txt
ext/: AtariST8x16SystemFont.cpp  CMakeLists.txt  config.h  fa-regular-400.cpp  fa-solid-900.cpp  lucide.c  pico.h
ext/sys/: mem.h
roms/: 4BB.xex  Farfar-perso1.xex  MODE2_hello-glyphs.xex  MODE4_SWBoy.xex  MODE5_Carrion-One_Zak_And_His_Kracken.xex  MODE6_Farfar-perso1.xex  MODE7_mascot.xex  NOTES.txt  affine_mode_dl.xex  carrion-One_Zak_And_His_Kracken.xex  hi-octane_hud.xex  mascot_bg.xex  mixed_modes.xex  multibank.xex  reset_vector.xex  smon-x65.xex  swboy.xex  text_mode.xex  veto-the_mill.xex  wozmon.xex
roms/parts/: affine_mode_dl.xex  font_8px.xex  image_boot_code.xex  mixed_mode_dl.xex  reset_vector.xex  smon.txt  text_mode_cl.xex  text_mode_dl.xex
src/: args.c  args.h  cli.c  cli.h  cmd.c  cmd.h  crash.cc  dap.cc  dap.h  hid.c  hid.h  icon.c  log.h  main.c  settings.cc  shell.html  x65-ui-impl.cc  x65.c
src/chips/: cgia.c  cgia.h  cgia_palette.h  m6526.h  m6569.h  mcp23017.h  mem.h  pwm.c  pwm.h  ria816.c  ria816.h  sgu1.c  sgu1.cc  sgu1.h  tca6416a.c  tca6416a.h  w65c816s.h  ymf262.c  ymf262.h  ymf825.c  ymf825.h
src/chips/su/: su.c  su.cpp  su.h
src/codegen/: README.txt  w65c816s_gen.py  w65c816s_gen.sh
src/common/: CMakeLists.txt  config.h  fs.c  gfx.c  gfx.h  shaders.glsl  ui.cc  webapi.c  webapi.h
src/systems/: ui_x65.h  x65-ui.cc  x65.c  x65.h
src/tests/: CMakeLists.txt  cpuemu.c  cputest.cpp
src/ui/: ui_app_log.cc  ui_app_log.h  ui_audio.h  ui_cgia.cc  ui_cgia.h  ui_console.cc  ui_console.h  ui_crt.h  ui_dasm.h  ui_dbg.h  ui_m6526.h  ui_memedit.h  ui_ria816.cc  ui_ria816.h  ui_settings.h  ui_sgu1.cc  ui_sgu1.h  ui_snapshot.h  ui_tca6416a.cc  ui_tca6416a.h  ui_util.h  ui_vram_debugger.cc  ui_vram_debugger.h  ui_w65c816s.h  ui_x65.cc  ui_x65.h  ui_ymf262.cc  ui_ymf262.h
src/util/: ringbuffer.c  ringbuffer.h  w65c816sdasm.h
